---------------------------------------------------------------------------------------------------
Version: 5.3.12
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 5.3.11
Date: 2021-01-08
  Changes:
    - Added a quick action to import the config from the logistics tab
---------------------------------------------------------------------------------------------------
Version: 5.3.10
Date: 2020-12-21
  Features:
    - Added a quick action to import the config from the inventory
    - Shift + Ctrl clicking presets will append presets without filling gaps
---------------------------------------------------------------------------------------------------
Version: 5.3.9
Date: 2020-12-15
  Bugfixes:
    - Fixed crash when starting a game from custom scenario that used an older version of the mod
---------------------------------------------------------------------------------------------------
Version: 5.3.8
Date: 2020-12-09
  Changes:
    - Added two new commands:
        /at_compress - Removes empty rows in the logistics configuratuon gui
        /at_insert_row <number> - Add an empty row after row #<number>, e.g. /at_insert_row 2 - Inserts an empty row after row #2
        For these commands a row is always 10 slots, regardless of the "Columns to display" mod setting
    - Removed blue as a status indicator: Yellow button background means items are being delivered, red means no items are available/being delivered
    - Minor changes to scrollbars to prevent the width of the gui changing
  Bugfixes:
    - Fixed crash when removing a preset via Spidertron and resaving it with the same name
---------------------------------------------------------------------------------------------------
Version: 5.3.7
Date: 2020-12-06
  Bugfixes:
    - Fixed crash with invalid status display
---------------------------------------------------------------------------------------------------
Version: 5.3.6