@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 5.3.12
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed crash when changing request/trash amounts with an empty slot selected
 ---------------------------------------------------------------------------------------------------
 Version: 5.3.11
 Date: 2021-01-08
